selfhost/test/typechecker/return/error_unreachable_stmt_match_inside.out
Error at %FILE_NAME%:5:7
Unreachable code
  |        val x = 123
           ^
Control flow exits before this code is reached
