selfhost/test/typechecker/return/error_unreachable_stmt_match_inside.abra
func foo(): Int {
  match 123 {
    _ => {
      return 123
      val x = 123
    }
  }
}